name:                IsNull
version:             0.2.4.0
synopsis:            Very simple class to determine if a structure is empty
description:         Very general way to determine if a structure is empty.
homepage:            https://github.com/jcristovao/IsNull
license:             BSD3
license-file:        LICENSE
author:              João Cristóvão
maintainer:          jmacristovao@gmail.com
category:            Data
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.16

library
  other-modules:       Data.IsNull.Internal
  exposed-modules:     Data.IsNull
  build-depends:       base             >= 4.5    && < 5
                     , base-compat      >= 0.4    && < 0.5
                     , containers       >= 0.5    && < 0.6
                     , text             >= 0.11.3 && < 1.3
                     , bytestring       >= 0.10.0 && < 1.0

  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  
-- the test suite checks for most (modern) applicable types
-- found on Cabal. Exceptions: utf8-string, ListLike, IxSet

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            main.hs
  hs-source-dirs:     test,src
  build-depends:      base             >= 4.5 
                    , base-compat      >= 0.4
                    , containers  >= 0.5
                    , text             >= 0.11.3
                    , bytestring       >= 0.10.0
                    , unordered-containers >= 0.2.3
                    , vector      >= 0.10.0.1
                    , text        >= 0.11.3.1
                    , bytestring  >= 0.10.0.2
                    , system-filepath >= 0.4.6
                    , QuickCheck    >= 2.6
                    , quickcheck-instances >= 0.3.5 
                    , HUnit         >= 1.2.5.2
                    , hspec         >= 1.7.2
  default-language: Haskell2010
